Fixed nav alignment and color

--- a/main.css
+++ b/main.css
@@ -1,8 +1,6 @@
-
 body {
-  background-color:  #767879;
+  background-color: #767879;
 }
-
 
 h2 {
   text-align: center;
@@ -36,12 +34,19 @@ p1 {
   text-align: center;
 }
 
-header ul {
+header nav {
   list-style-type: none;
   margin: 0;
   padding: 0%;
   overflow: hidden;
   background-color: #717272;
+  flex-wrap: nowrap;
+}
+
+header nav a:link,
+header nav a:visited,
+header nav a:active {
+  color: #abb8f5;
 }
 
 li {
@@ -56,7 +61,6 @@ a {
   text-align: center;
 }
 
-
 img {
   float: left;
   height: 250px;
@@ -67,13 +71,15 @@ p {
   width: 50%;
 }
 
+/*
 nav-item {
   color: rgb(0, 0, 0);
 }
 nav-link {
   color: rgb(0, 0, 0);
 }
+*/
 
 ol {
   display: block;
-  }
+}
